# DoricThree

./: .gitignore  .gitmodules  DoricGLTFPlayer.podspec  DoricThree.podspec  README.md  index.ts  package.json  publish.sh  rollup.config.js  tsconfig.json
.github/workflows/: publish.yml
android/: CMakeLists.txt  build.gradle  pom.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: native-lib-draco.cpp  native-lib-ktx.cpp  native-lib.cpp
example/: package.json  rollup.config.js  tsconfig.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/pub/doric/android/: MainActivity.java  MainApplication.java
example/assets/: fenli.gltf  robotitus.glb  圆形展厅.glb
example/assets/threejs/hall/: hall.gltf
example/iOS/: Podfile
example/iOS/App/: SceneDelegate.m
example/iOS/Example.xcodeproj/: project.pbxproj
example/src/: Example.ts  Example.tsx  GLTFViewer.tsx  Loader.tsx  data.ts  webgl_loader_gltf_fullscreen.tsx  webgl_loader_texture_ktx2.ts
iOS/Classes/: DoricDracoPlugin.h  DoricDracoPlugin.mm  DoricGLTFPlayerLibrary.h  DoricGLTFPlayerLibrary.m  DoricThreeLibrary.h  DoricThreeLibrary.m  DoricThreeLibrary.mm
lib/: GLTFView.ts  ThreeView.ts  console.ts  glTF.ts  utils.ts
lib/controls/: OrbitControls.ts
lib/loaders/: FileLoader.ts  GLTFLoader.ts  GLTFUtils.ts  Interpolation.ts  KTX2Loader.ts  NewGLTFLoader.ts  RGBELoader.ts  TextureLoader.ts  _GLTFLoader.ts  glTF.ts
lib/loaders/extensions/: GLTFDracoMeshCompressionExtension.ts  GLTFExtensions.ts  GLTFLightsExtension.ts  GLTFMaterialsClearcoatExtension.ts  GLTFMaterialsIorExtension.ts  GLTFMaterialsPbrSpecularGlossinessExtension.ts  GLTFMaterialsSheenExtension.ts  GLTFMaterialsSpecularExtension.ts  GLTFMaterialsTransmissionExtension.ts  GLTFMaterialsUnlitExtension.ts  GLTFMaterialsVariantsExtension.ts  GLTFMaterialsVolumeExtension.ts  GLTFMeshQuantizationExtension.ts  GLTFMeshoptCompressionExtension.ts  GLTFTextureBasisUExtension.ts  GLTFTextureTransformExtension.ts  GLTFTextureWebPExtension.ts
scripts/: maven.properties
